--- a/index.Rmd
+++ b/index.Rmd
@@ -313,3 +313,27 @@ class: middle
 
     - Selection of the population (representativeness)
     - Choice of comparison group <br> (healthy worker effect)
+    - Ascertainment of disease status <br> (losses to follow up)
+    
+    
+---
+class: middle
+
+# Example of bias: <br> HRT and breast cancer 
+
+- Self-reported drug history
+
+- People on HRT were more likely to be followed 
+
+- Detection bias: patients on HRT more likely to attend their physician than those not, thus they were more likely to have cancer detected early
+
+
+---
+class: middle
+
+# Confounding
+
+- Confounding is about alternative explanations
+
+- It occurs when an estimate of the association
+    
